fix formulario crear lugar

--- a/lib/src/component/private/crear_component/crear_component.html
+++ b/lib/src/component/private/crear_component/crear_component.html
@@ -2,7 +2,7 @@
     <div class="well">
         <a [routerLink]="routes.lugares.toUrl()">Lugares</a> / Crear Lugar
     </div>
-    <div class="container">
+    <div class="container-fluid">
         <label>Nombre</label>
         <input type="text" class="form-control" [(ngModel)]="lugar.nombreLugar"/>
         <br />
