--- a/lib/src/component/private/crear_component/crear_component.scss
+++ b/lib/src/component/private/crear_component/crear_component.scss
@@ -1,9 +1,5 @@
 .container-fluid{
+  width: 60%;
   padding-top: 70px !important;
-}
-#map-canvas {
-  height: 300px;
-  margin: 0px;
-  padding: 0px
 }
 
